Working on first sections

--- a/index.html
+++ b/index.html
@@ -55,22 +55,23 @@
 									<header class="major">
 										<h2>About me</h2>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>My name is William Boyd and I am from Kittery Point, ME.
+										 I am student at the University of Wisconsin-Madison studying Computer Science with a minor in Data Science (GPA 3.76).
+									 </p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+									<h3>Skills</h3>
+									<ul>
+										<li>Java(Proficient)</li>
+										<li>Python</li>
+										<li>C(Some experience)</li>
+										<li>SQL(experience with sqlite3)</li>
+										<li>Customer Service</li>
+										<li>Conversational in French</li>
 									</ul>
 								</div>
 							</section>
