Added linkedin button

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#one" class="active">About Me</a></li>
+						<li><a href="#two">Skills</a></li>
+						<li><a href="#three">Previous Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/william-boyd-35789a18b/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
@@ -66,10 +66,10 @@
 								<div class="container">
 									<h3>Skills</h3>
 									<ul>
-										<li>Java(Proficient)</li>
+										<li>Java (Proficient)</li>
 										<li>Python</li>
-										<li>C(Some experience)</li>
-										<li>SQL(experience with sqlite3)</li>
+										<li>C (Some experience)</li>
+										<li>SQL (experience with sqlite3)</li>
 										<li>Customer Service</li>
 										<li>Conversational in French</li>
 									</ul>
@@ -79,7 +79,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
+									<h3>Previous Projects</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
