--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
 								<div class="container">
 									<h3>Skills</h3>
 									<ul>
-										<li>Java (Proficient)</li>
+										<li>Java</li>
 										<li>Python</li>
 										<li>C (Some experience)</li>
+										<li>x86 Assembly (Some experience)</li>
 										<li>SQL (experience with sqlite3)</li>
 										<li>Customer Service</li>
 										<li>Conversational in French</li>
