--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<span class="image avatar"><img src="images/Headshot.png" alt="" /></span>
 					<h1 id="logo">William Boyd</h1>
 					<p>Student at University of Wisconsin-Madison<br />
-					Majoring in Computer Science with a minor in Data Science</p>
+					Majoring in Computer Science with a minor in Data Science.</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -54,6 +54,7 @@
 									</header>
 									<p>My name is William Boyd and I am from Kittery Point, ME.
 										 I am student at the University of Wisconsin-Madison studying Computer Science with a minor in Data Science (GPA 3.76).
+										 I'm interested in Software Development, Machine Learning, and Data Science to name a few topics.
 									 </p>
 								</div>
 							</section>
