--- a/index.html
+++ b/index.html
@@ -79,13 +79,19 @@
 							<section id="three">
 								<div class="container">
 									<h3>Previous Projects</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://github.com/pwilly1000/PremierLeagueData" class="image"><img src="images/TopScorersGraph.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Premier League Data</h4>
+												<p>A jupyter notebook file in which I created a Database of Premier League data from the last 3 seasons and used it to answer some questions</p>
+												<p>Skills demonstrated:</p>
+												<ul>
+													<li>Pandas</li>
+													<li>sqlite3 and SQL queries</li>
+													<li>matplotlib</li>
+													<li>Jupyter Notebook</li>
+												</ul>
 											</div>
 										</article>
 										<article>
