--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<h3>Previous Projects</h3>
 									<div class="features">
 										<article>
-											<a href="https://github.com/pwilly1000/PremierLeagueData" class="image"><img src="images/TopScorersGraph.jpg" alt="" /></a>
+											<a href="https://github.com/pwilly1000/PremierLeagueData/blob/main/main.ipynb" class="image"><img src="images/TopScorersGraph.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Premier League Data</h4>
 												<p>A jupyter notebook file in which I created a Database of Premier League data from the last 3 seasons and used it to answer some questions</p>
