--- a/index.html
+++ b/index.html
@@ -94,13 +94,15 @@
 												</ul>
 											</div>
 										</article>
+
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>More projects coming soon!</h4>
+												<p>Ask me about private projects from classes which can't be made public on Github</p>
 											</div>
 										</article>
+										<!--
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
@@ -111,6 +113,7 @@
 									</div>
 								</div>
 							</section>
+							--!>
 
 						<!-- Five -->
 						<!--
