Added new projects

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
 								<div class="container">
 									<h3>Skills</h3>
 									<ul>
-										<li>Java</li>
 										<li>Python</li>
+										<li>Java</li>
+										<li>AWS Sagemaker, S3, and Glue (Some experience)</li>
+										<li>Docker (Some experience)</li>
 										<li>C (Some experience)</li>
 										<li>x86 Assembly (Some experience)</li>
 										<li>SQL (experience with sqlite3)</li>
@@ -80,6 +82,34 @@
 								<div class="container">
 									<h3>Previous Projects</h3>
 									<div class="features">
+										<article>
+											<a href="https://medium.com/@joshua.esrig/using-gans-to-generate-pokemon-ae4f2b12b265" class="image"><img src="images/pokemon_image" alt="" /></a>
+											<div class="inner">
+												<h4>Pokemon Generator</h4>
+												<p>This was the final project for my "Neural Networks and Deep Learning" class at DIS Copenhagen.
+													Working along with two other students we attempted to create a General Adversarial Neural Network (GAN) to generate images of Pokemon.</p>
+												<p>Skills demonstrated:</p>
+												<ul>
+													<li>Python</li>
+													<li>Jupyter Notebook</li>
+													<li>Neural Networks</li>
+													<li>Git in a team based context</li>
+												</ul>
+											</div>
+										</article>
+										<article>
+											<a href="https://http://www.coaching-library.com/"></a>
+											<div class="inner">
+												<h4>Coaching Library</h4>
+												<p>This is a project I worked on along with collaborator over this course of a few months. I focused on the data scraping and backend configurations
+												while my partner focused on the front end.</p>
+												<p>Skills demonstrated:</p>
+												<ul>
+													<li>Python</li>
+													<li>Selenium and Beautiful Soup for Web Scraping</li>
+												</ul>
+											</div>
+										</article>
 										<article>
 											<a href="https://github.com/pwilly1000/PremierLeagueData/blob/main/main.ipynb" class="image"><img src="images/TopScorersGraph.jpg" alt="" /></a>
 											<div class="inner">
