Made adjustment to project images

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://http://www.coaching-library.com/"></a>
+											<a href="https://medium.com/@joshua.esrig/using-gans-to-generate-pokemon-ae4f2b12b265" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Coaching Library</h4>
 												<p>This is a project I worked on along with collaborator over this course of a few months. I focused on the data scraping and backend configurations
