--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<li>Docker (Some experience)</li>
 										<li>C (Some experience)</li>
 										<li>x86 Assembly (Some experience)</li>
-										<li>SQL (experience with sqlite3)</li>
+										<li>SQL</li>
 										<li>Customer Service</li>
 										<li>Conversational in French</li>
 									</ul>
