Updated project images

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<h3>Previous Projects</h3>
 									<div class="features">
 										<article>
-											<a href="https://medium.com/@joshua.esrig/using-gans-to-generate-pokemon-ae4f2b12b265" class="image"><img src="images/pokemon_image" alt="" /></a>
+											<a href="https://medium.com/@joshua.esrig/using-gans-to-generate-pokemon-ae4f2b12b265" class="image"><img src="images/pokemon_image.png" alt="" /></a>
 											<div class="inner">
 												<h4>Pokemon Generator</h4>
 												<p>This was the final project for my "Neural Networks and Deep Learning" class at DIS Copenhagen.
@@ -98,7 +98,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://medium.com/@joshua.esrig/using-gans-to-generate-pokemon-ae4f2b12b265" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://coaching-library.com/" class="image"><img src="images/coaching.png" alt="" /></a>
 											<div class="inner">
 												<h4>Coaching Library</h4>
 												<p>This is a project I worked on along with collaborator over this course of a few months. I focused on the data scraping and backend configurations
